spacing issue resolve in navbar.scss

--- a/css/style.css
+++ b/css/style.css
@@ -3622,7 +3622,8 @@ tbody.collapse.show {
   font-size: 16px;
   line-height: 22px;
   margin: 5px 0;
-  list-style: none; }
+  list-style: none;
+  padding-inline-start: 0; }
 
 .nav-link {
   color: #54646f !important;
