--- a/scss/components/header/_navbar.scss
+++ b/scss/components/header/_navbar.scss
@@ -55,6 +55,7 @@
         line-height: 22px;
         margin: 5px 0;
         list-style: none;
+        padding-inline-start: 0;
     }
     &-link {
         color: #54646f !important;
